--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
                 class="featured-image"
               />
               <p>
-                Benteng Rotterdam bukan hanya bangunan bersejarah — ia adalah saksi bisu perjalanan panjang Makassar dari masa kejayaan kerajaan hingga era kolonial. Terletak di tepi barat kota Makassar, benteng ini merupakan salah satu benteng peninggalan terbaik dan terawat di Indonesia.
+                Benteng Rotterdam bukan hanya bangunan bersejarah, ia adalah saksi bisu perjalanan panjang Makassar dari masa kejayaan kerajaan hingga era kolonial. Terletak di tepi barat kota Makassar, benteng ini merupakan salah satu benteng peninggalan terbaik dan terawat di Indonesia.
               </p>
             </section>
             <section class="card">
